# wind

wind_rs/: Cargo.toml
wind_rs/src/: main.rs
wind_rs_way/: Cargo.toml
wind_rs_way/src/: main.rs  state.rs
